bugfix: fix menu height and overflow in portrait orientation (mobile)

--- a/src/blocks/modules/_modules.scss
+++ b/src/blocks/modules/_modules.scss
@@ -5,3 +5,7 @@
 @import 'key-projects/key-projects';
 @import 'contact-form/contact-form';
 @import "footer/footer";
+
+.menu-opened {
+  overflow: hidden;
+}
