--- a/src/blocks/modules/header/_header.scss
+++ b/src/blocks/modules/header/_header.scss
@@ -192,10 +192,12 @@
   }
 
   &__socials {
-    align-self: center;
-    width: fit-content;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
     fill: $border-color;
-    gap: 50px;
+    gap: 25px;
+    border-bottom: 1px solid $border-color;
 
     @media (min-width: $lg) {
       padding-inline: 30px;
@@ -216,7 +218,7 @@
 
   &__socials-link {
     display: block;
-    padding: 30px 0;
+    padding: 30px 25px;
     transition-duration: 0.5s;
     color: #667080;
 
